--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   <title>Browser Starter</title>
 </head>
 <body>
-  <h1>shadow-cljs - Browser</h1>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="app"></div>
   <script src="/js/main.js"></script>
